Map overlap on Navbar issue resolved

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -142,6 +142,7 @@ nav {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      z-index: 100;
 
       &.active {
         display: flex;
